# mlb-data-viewer

./: .env.example  .gitignore  NOTICE  README.es.md  README.ja.md  README.ko.md  README.md  config.docker.yml  config.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
db/: init.sql  schema.sql
dbt_mlb/: dbt_project.yml  profiles.yml
dbt_mlb/models/marts/: dim_players.sql  dim_teams.sql  fct_batting_performance.sql  fct_game_summary.sql  fct_pitching_performance.sql  fct_statcast_leaders.sql  fct_team_season_summary.sql  schema.yml
dbt_mlb/models/staging/: schema.yml  sources.yml  stg_batting_stats.sql  stg_games.sql  stg_pitching_stats.sql  stg_players.sql  stg_schedule.sql  stg_statcast.sql  stg_teams.sql
dbt_mlb/tests/: assert_batting_avg_in_range.sql  assert_era_in_range.sql  assert_game_scores_non_negative.sql  assert_ops_equals_obp_plus_slg.sql  assert_pythagorean_wins_reasonable.sql  assert_statcast_speed_in_range.sql  assert_team_season_wins_losses_sum.sql  assert_win_loss_consistency.sql
docker/db/: init.sql
docker/dbt/: Dockerfile
docker/evidence/: Dockerfile
docker/extraction/: Dockerfile
docs/: api_endpoints.md  qa_report.md
evidence_mlb/: package-lock.json  package.json
evidence_mlb/pages/: batting.md  index.md  pitching.md  standings.md  statcast.md
evidence_mlb/pages/players/: [player_id].md
scripts/: extract_batting_stats.py  extract_games.py  extract_pitching_stats.py  extract_players.py  extract_schedule.py  extract_statcast.py  extract_teams.py  run_extraction.py  utils.py
tests/: test_e2e_pipeline.py
(+8 files in other folders)
